Added Rank Config

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -8,4 +8,9 @@
 #Teleport you to spawn when you join & login
 #true or false
 Alway-Spawn: true
+
+#----------------------------------------# RANK #----------------------------------------#
+#Allow Rank in their chat and above head
+#true or false
+Allow-Rank: true
 ...
