--- a/resources/config.yml
+++ b/resources/config.yml
@@ -40,8 +40,16 @@ Allow-NoVoid: true
 #Name world to allow the no void system
 No-Void-World: "hub"
 
-#---------------------------------------# HIGHPING KICK #-----------------------------------#
+#---------------------------------------# HIGHPING KICK #------------------------------------#
 #Enable or Disable this option if you want that players with high ping get kicked
 Enable-HighPingKick: true
 Max-Ping: 500
+
+#---------------------------------------# DEVICE BLOCKING #----------------------------------#
+#Device List:
+#Android = 1, IOS = 2, Windows = 7
+Allowed-Devices:
+- 1
+- 2
+- 7
 ...
