added possible api's

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: CLACore
 version: 1.0.0
-api: [CLA, 3.0.0-ALPHA10]
+api: [CLA, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 main: CLACore\Core
 author: CLADevs Team
 website: https://github.com/CLADevs/CLACore
